ft-MultiLang_chain_translation: Implemented recursive translation call through comma-separated language array.

--- a/views/index.html
+++ b/views/index.html
@@ -102,6 +102,13 @@
         </div>
       </div>
       <hr />
+      <div class="form-group mid-data">
+        <!-- Intermidiate languages field -->
+        <label for="mid_lang" class="col-xs-2">Mid languages:</label>
+        <div class="col-xs-3">
+          <input type="text" class="form-control" name="mid_lang" id="mid_lang" />
+        </div>
+      </div>
       <!-- Progress status information -->
       <div id="status" class="start">
         <progress id="progBar" value="0" max="100"></progress>
