--- a/views/index.html
+++ b/views/index.html
@@ -49,19 +49,19 @@
         <!-- Table field -->
         <label for="table" class="col-xs-1">Table:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="table" id="table" />
+          <input type="text" class="form-control" name="Table" id="table" />
         </div>
 
         <!-- Table field's field -->
         <label for="table_field" class="col-xs-1 space">Field:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="table_field" id="table_field" />
+          <input type="text" class="form-control" name="Field" id="table_field" />
         </div>
 
         <!-- Table field's field -->
         <label for="tmp_table" class="col-xs-2 space">Output table name:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="tmp_table" id="tmp_table" />
+          <input type="text" class="form-control" name="Tmp table" id="tmp_table" />
         </div>
       </div>
       <div class="form-group mid-data">
@@ -75,7 +75,7 @@
         <!-- PK field's field -->
         <label for="pk_field" class="col-xs-2 space">Primary Key:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="pk_field" id="pk_field" />
+          <input type="text" class="form-control" name="Primary key" id="pk_field" />
         </div>
       </div>
       <hr />
@@ -86,19 +86,19 @@
         <!-- Origin Language field -->
         <label for="orig_lang" class="col-xs-2">Origin language:</label>
         <div class="col-xs-1">
-          <input type="text" class="form-control" name="orig_lang" id="orig_lang" maxlength="2" />
+          <input type="text" class="form-control" name="Origin Language" id="orig_lang" maxlength="2" />
         </div>
 
         <!-- Target Language field -->
         <label for="targ_lang" class="col-xs-2 space">Target language:</label>
         <div class="col-xs-1">
-          <input type="text" class="form-control" name="targ_lang" id="targ_lang" maxlength="2" />
+          <input type="text" class="form-control" name="Target language" id="targ_lang" maxlength="2" />
         </div>
 
         <!-- Maximum field length -->
         <label for="max_length" class="col-xs-2 space">Column length:</label>
         <div class="col-xs-1">
-          <input type="text" class="form-control" name="max_length" id="max_length" />
+          <input type="text" class="form-control" name="Column length" id="max_length" />
         </div>
       </div>
       <hr />
@@ -106,7 +106,7 @@
         <!-- Intermidiate languages field -->
         <label for="mid_lang" class="col-xs-2">Mid languages:</label>
         <div class="col-xs-3">
-          <input type="text" class="form-control" name="mid_lang" id="mid_lang" />
+          <input type="text" class="form-control" name="Mid languages" id="mid_lang" />
         </div>
       </div>
       <!-- Progress status information -->
