--- a/views/index.html
+++ b/views/index.html
@@ -108,6 +108,12 @@
         <div class="col-xs-3">
           <input type="text" class="form-control" name="Mid languages" id="mid_lang" />
         </div>
+
+        <!-- Non translation file field -->
+        <label for="non_tra" class="col-xs-2">Non transl. file:</label>
+        <div class="col-xs-4">
+          <input type="file" class="form-control" name="no_trans_file" id="non_tra" />
+        </div>
       </div>
       <!-- Progress status information -->
       <div id="status" class="start">
