ft-Remove_test_data: Removed test data from view.

--- a/views/index.html
+++ b/views/index.html
@@ -27,19 +27,19 @@
         <!-- Username field -->
         <label for="username" class="col-xs-1">Username:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="username" id="username" value="inwms" />
+          <input type="text" class="form-control" name="username" id="username" />
         </div>
 
         <!-- Password field -->
         <label for="password" class="col-xs-1 space">Password:</label>
         <div class="col-xs-2">
-          <input type="password" class="form-control" name="password" id="password" value="inwms" />
+          <input type="password" class="form-control" name="password" id="password" />
         </div>
 
         <!-- Connection env. field -->
         <label for="connection_env" class="col-xs-2 space">Connection Name:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="connection" id="connection_env" value="PUIGDEV" />
+          <input type="text" class="form-control" name="connection" id="connection_env" />
         </div>
       </div>
       <hr />
@@ -49,19 +49,19 @@
         <!-- Table field -->
         <label for="table" class="col-xs-1">Table:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="Table" id="table" value="ftexte" />
+          <input type="text" class="form-control" name="Table" id="table" />
         </div>
 
         <!-- Table field's field -->
         <label for="table_field" class="col-xs-1 space">Field:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="Field" id="table_field" value="text" />
+          <input type="text" class="form-control" name="Field" id="table_field" />
         </div>
 
         <!-- Table field's field -->
         <label for="tmp_table" class="col-xs-2 space">Output table name:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="Tmp table" id="tmp_table" value="ftexte_tmp" />
+          <input type="text" class="form-control" name="Tmp table" id="tmp_table" />
         </div>
       </div>
       <div class="form-group mid-data">
@@ -69,13 +69,13 @@
         <!-- Where condition field -->
         <label for="condition" class="col-xs-2">Where condition:</label>
         <div class="col-xs-5">
-          <textarea class="form-control" name="condition" id="condition" rows="4" cols="25">sprache = 'DE' and rownum <= 50</textarea>
+          <textarea class="form-control" name="condition" id="condition" rows="4" cols="25"></textarea>
         </div>
 
         <!-- PK field's field -->
         <label for="pk_field" class="col-xs-2 space">Primary Key:</label>
         <div class="col-xs-2">
-          <input type="text" class="form-control" name="Primary key" id="pk_field" value="code" />
+          <input type="text" class="form-control" name="Primary key" id="pk_field" />
         </div>
       </div>
       <hr />
@@ -86,19 +86,19 @@
         <!-- Origin Language field -->
         <label for="orig_lang" class="col-xs-2">Origin language:</label>
         <div class="col-xs-1">
-          <input type="text" class="form-control" name="Origin Language" id="orig_lang" maxlength="2" value="de" />
+          <input type="text" class="form-control" name="Origin Language" id="orig_lang" maxlength="2" />
         </div>
 
         <!-- Target Language field -->
         <label for="targ_lang" class="col-xs-2 space">Target language:</label>
         <div class="col-xs-1">
-          <input type="text" class="form-control" name="Target language" id="targ_lang" maxlength="2" value="es" />
+          <input type="text" class="form-control" name="Target language" id="targ_lang" maxlength="2" />
         </div>
 
         <!-- Maximum field length -->
         <label for="max_length" class="col-xs-2 space">Column length:</label>
         <div class="col-xs-1">
-          <input type="text" class="form-control" name="Column length" id="max_length" value="80" />
+          <input type="text" class="form-control" name="Column length" id="max_length" />
         </div>
       </div>
       <hr />
@@ -106,7 +106,7 @@
         <!-- Intermidiate languages field -->
         <label for="mid_lang" class="col-xs-2">Mid languages:</label>
         <div class="col-xs-8">
-          <input type="text" class="form-control" name="Mid languages" id="mid_lang" value="en" />
+          <input type="text" class="form-control" name="Mid languages" id="mid_lang" />
         </div>
       </div>
       <div class="form-group mid-data">
